good understanding of flex-box

--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-<div class="container-1">
+<div class="top-row">
     <div class="logo"><img src="./assets/logo.png" alt=""></div>
     <div class="text-box">
         <div class="first-text">
-            <div id="insta">instagram</div>
-            <div>
-                <input type="text">
-            </div>
+            <div>instagram</div>
+            <div> <input type="text"></div>
             <div> <img id="dots" src="./assets/three-dots.png" alt=""></div>
         </div>
         <div class="second-text">
-            <div>posts</div>
-            <div>followers</div>
-            <div>following</div>
+            <div><span>5,863</span> posts</div>
+            <div><span>303m</span> followers</div>
+            <div><span>223</span> following</div>
         </div>
-        <div>instagram</div>
-        <div>Bringing you closer to people and things you love ♥️</div>
-        <div>help.instagram.com</div>
-        <div>followed by <span>thedailyshow</span> and <span> kevin</span></div>
+        <div id="insta">Instagram</div>
+        <div class="last-text">Bringing you closer to people and things you love ♥️</div>
+        <div class="last-text" id="blue">help.instagram.com</div>
+        <div class="last-text" id="light-text">followed by <span>thedailyshow</span> and <span> kevin</span></div>
     </div>
 </div>
 
@@ -37,6 +35,15 @@
     <div class="icons"><img src="./assets/asmr.png" alt=""></div>
     <div class="icons"><img src="./assets/sports.png" alt=""></div>
     <div class="icons"><img src="./assets/sports.png" alt=""></div>
+</div>
+<div class="container-3">
+    <div>talent</div>
+    <div>travel</div>
+    <div>beauty</div>
+    <div>fluff</div>
+    <div>asmr</div>
+    <div>sports</div>
+    <div>sports</div>
 </div>
 
 
